--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.5",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.4",
-    "@types/node": "^15.12.5"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.4"
   },
   "scripts": {
     "ts-node": "ts-node",
     "multiply": "ts-node multiplier.ts",
-    "calculate": "ts-node caluclator.ts"
+    "calculate": "ts-node caluclator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
