--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.30.0",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.4"
@@ -11,7 +14,9 @@
     "multiply": "ts-node multiplier.ts",
     "calculate": "ts-node caluclator.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
+    "fix": "eslint --ext .ts . --fix"
   },
   "dependencies": {
     "express": "^4.17.1"
